--- a/style.css
+++ b/style.css
@@ -213,77 +213,78 @@ section .header{
     color: #ccc;
 }
 
-.pricing{
-    margin-top: 4rem;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+.container-project {
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    
 }
-
-.pricing .card{
-    padding: 3rem 2rem;
-    background-color: #27272a;
-    display: flex;
-    flex-direction: column;
-    border: 2px solid transparent;
+.container-project .box{
+    padding: 3.5rem 1.25rem;
+    background-color: #27272a38;
     border-radius: 15px;
+    border: 2px solid transparent;
     transition: all 0.3s ease;
 }
-
-.pricing .card:hover{
+.container-project .box:hover{
     background-color: #323232;
     border-color: #fff;
-}
 
-.pricing .card .content{
-    flex: 1;
-    margin-bottom: 2rem;
 }
-
-.pricing .card h4{
-    margin-bottom: 1rem;
+.container-project .columns{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: -0.75rem;
+    margin-right: -0.75rem;
+    margin-top: -0.75rem;
+    text-align: center;
+    justify-content: center;
+}
+.container-project .column{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 0;
+    flex-shrink: 1;
+    padding: 0.75rem;
+    transition: all 0.3s ease;
+}
+.container-project h1{
     color: #fff;
-    font-size: 1.2rem;
-    font-weight: 500;
-}
-
-.pricing .card h3{
-    color: #fff;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
+    font-family: 'eurostile', sans-serif;
     font-size: 2rem;
-    font-weight: 600;
-    border-bottom: 2px dashed #fff;
 }
-
-.pricing .card p{
-    color: #fff;
-    margin-bottom: 0.75rem;
-    font-size: 0.85rem;
-}
-
-.pricing .card p i{
+.container-project p{
+    font-size: 1.25rem;
     color: #ccc;
-    font-size: 1.2rem;
-    margin-right: 0.3rem;
+    font-family: 'eurostile', sans-serif;
 }
-
-.pricing .card button{
+.container-project .button {
+    background-color: #1d4ed8;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    padding: 0.75rem;
+    font-family: 'europa', sans-serif;
+}
+.container-project a{
     color: #fff;
-    background-color: transparent;
-    border: 2px solid #fff;
+    transition: all 0.3s ease;
+}
+.container-project a:hover{
+    background-color: #1e40af;
 }
 
-.pricing .card button:hover{
-    background-color: #1e40af;
-    border-color: #1e40af;
+.container-project span{
+    color: #fff;
+    display: inline-block;
 }
 
 footer{
     position: relative;
     display: grid;
-    grid-template-columns: 400px repeat(3, 1fr);
-    gap: 2rem;
+    grid-template-columns: 660px  400px;
+    gap: 3rem; 
+    justify-content: space-between;
 }
 
 footer .column .logo{
@@ -300,13 +301,14 @@ footer .column .socials{
     display: flex;
     align-items: center;
     gap: 1rem;
+    justify-content: end;
 }
 
 footer .column .socials a{
     color: #ccc;
     border: 1px solid #ccc;
     padding: 5px 10px;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     border-radius: 100%;
     transition: all 0.3s ease;
 }
@@ -344,11 +346,102 @@ footer .column > a:hover{
     text-align: center;
 }
 
+/* .formulario-presupuesto {
+    width: 100%;
+}
+.navbar {
+    padding: 1.2rem 0;
+    box-shadow: none;
+    z-index: none;
+}
+.navbar .container-presupuesto{
+    width: 1200px;
+    display: flex;
+    align-items: stretch;
+    min-height: 3.25rem;
+    flex-grow: 1;
+    margin: 0 auto;
+    position: relative;
+}
+.navbar .logo {
+    width: 75px;
+}
+.navbar .icon{
+    color: #fff;
+}
+.navbar-brand{
+    align-items: stretch;
+    display: flex;
+    flex-shrink: 0;
+    min-height: 3.25rem;
+}
+.navbar-item{
+    flex-grow: 0;
+    flex-shrink: 0;
+    color: #1e40af;
+    position: relative;
+    line-height: 1.5;
+}
+.navbar .navbar-menu{
+    box-shadow: none;
+    padding: 0.5rem 0;
+    text-align: center;
+    height: 66px;
+    width: 1200px;
+    z-index: auto;
+    line-height: 27px;
+    box-sizing: border-box;
+    position: static;
+}
+.navbar .buttons{
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    color: #1e40af;
+} */
+
+
+
+
+
+
+
 @media (width < 900px){
     .nav-links {
         display: none;
     }
     header {
         grid-template-columns: repeat(1, 1fr);
+    }
+    header .image{
+        grid-area: 1/1/2/2;
+    }
+    .features{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .container-project{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    footer{
+        grid-template-columns: 1fr 200px;
+    }
+
+}
+@media (width < 600px){
+    header .image::before{
+        display: none;
+    }
+
+    .features{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .container-project{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    footer{
+        grid-template-columns: 1fr 150px;
     }
 }
