--- a/style.css
+++ b/style.css
@@ -339,6 +339,22 @@ section .header{
     border-radius: 15px;
     margin-bottom: 1rem;
 }
+.imgSBC{
+    position: relative;
+    bottom: 20px;
+}
+.bRC{
+    position: relative;
+    top: 15px;
+}
+.bGD{
+    position: relative;
+    top: 15px;
+}
+.bSBC{
+    position: relative;
+    top: 23px;
+}
 .container-form{
     width: 100%;
     max-width: 1100px;
